--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,11 @@ body{
 .blog-title{
   font-size: 1.3rem;
   font-weight: 800;
-  margin: 15px 0
+  margin: 15px 0;
+  transition: all .5s;
+}
+.blog-title:hover{
+  color: #EED153;
 }
 .blog-about{
 
